--- a/c/ca/cas/caselogic.com.html
+++ b/c/ca/cas/caselogic.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the caselogic.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216001933id_/http%3A//www.caselogic.com/help/index.cfm%3Ffuseaction%3Dprivacy%26PageEnd_Link%3DPrivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the caselogic.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616062621id_/http%3A//www.caselogic.com/help/index.cfm%3Ffuseaction%3Dprivacy%26PageEnd_Link%3DPrivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
 <meta http-equiv="P3P" content="policyref=&quot;http://www.ebags.com/w3c/p3p.xml&quot;">
@@ -12,6 +12,8 @@
 <style type="text/css">
 @import "/CL-master.css";
 </style>
+<script type="text/javascript" src="/Utils/JAVASCRIPT/jquery-1.3.2.min.js"></script>
+<script type="text/javascript" src="/Utils/JAVASCRIPT/DropDownMenu.js"></script>
 </head>
 <body>
 <script language="JavaScript">
@@ -32,21 +34,47 @@ else
 popupWindow.focus();
 }
 }
+function CleanInvalidSearchBoxCharacters(searchBox)
+{
+var matchedValues = searchBox.value.match(/[\{\}\v\t\r\n\f\+\*\\\|<>=~;]/g, "");
+if (matchedValues != null)
+{
+searchBox.value = searchBox.value.replace(/[\{\}\v\t\r\n\f\+\*\\\|<>=~;]/g, "");
+}
+}
 </script>
 <div id="wrapper">
 <div id="header">
 <div id="logo"><a href="/"><img src="http://a1512.g.akamaitech.net/f/1512/124/1h/images.ebags.com/img/caselogic/logo-cl.gif" border="0" alt="Case Logic"></a></div>
 <div id="hdr-nav">
-<a href="/">Home</a> |
+<div id="myslidemenu" class="globalslidemenu-home">
+<ul>
+<li>
 <a href="/members/index.cfm?fuseaction=login">Sign In</a>
-| <a href="/members/index.cfm?fuseaction=trackorder&amp;LoginName=#URLencodedformat('track your recent orders')#&amp;TimeFrame=Recent&amp;YourAccount_Link=RecentOrders">Track Your Order</a>
-| <a href="/members/index.cfm?fuseaction=welcome">Your Account</a>
-| <span class="cart"><a href="/shoppingcart/index.cfm?FuseAction=viewcart&amp;CurrentTime=#URLEncodedFormat(Now())#&amp;requesttimeout=9000">Your Cart</a></span>
-| <span class="global"><a href="/about/index.cfm?fuseaction=international">Global Sites</a></span>
+</li>
+<li><a href="/members/index.cfm?fuseaction=trackorder&amp;LoginName=#URLencodedformat('track your recent orders')#&amp;TimeFrame=Recent&amp;YourAccount_Link=RecentOrders">Track Your Order</a></li>
+<li><a href="/members/index.cfm?fuseaction=welcome">Your Account</a></li>
+<li class="cart"><a href="/shoppingcart/index.cfm?FuseAction=viewcart&amp;CurrentTime=#URLEncodedFormat(Now())#&amp;requesttimeout=9000">Your Cart</a></li>
+<li class="downarrow"><a href="#" class="last">Choose a Country</a>
+<ul style="top: 162px; display: none; visibility: visible;">
+<li class="belgium"><a href="http://www.caselogic.be/Home/tabid/235/Default.aspx" class="first">Belgie/Belgique</a></li>
+<li class="eu"><a href="http://www.caselogic.eu/">caselogic.eu</a></li>
+<li class="germany"><a href="http://www.caselogic.de/Home/tabid/70/Default.aspx">Deutschland</a></li>
+<li class="france"><a href="http://www.caselogic.fr/Home/tabid/187/Default.aspx">France</a></li>
+<li class="netherlands"><a href="http://www.caselogic.nl/Home/tabid/163/Default.aspx">Netherlands</a></li>
+<li class="austria"><a href="http://www.caselogic.at/Home/tabid/70/Default.aspx">Österreich</a></li>
+<li class="spain"><a href="http://www.caselogic.es/Home/tabid/211/Default.aspx">Spain</a></li>
+<li class="global"><a href="/about/index.cfm?fuseaction=international">Global Contacts</a></li>
+</ul>
+</li>
+</ul>
 </div>
-<br>
+</div>
 <div id="hdr-search">
-<form action="http://www.caselogic.com/search/index.cfm" method="get" name="textForm"><input type="Hidden" name="fuseaction" value="EndecaSearch"><input type="hidden" name="N" value="0">
+<form action="http://www.caselogic.com/search/index.cfm" method="get" name="textForm" id="searchForm" onsubmit="CleanInvalidSearchBoxCharacters(this.Ntt); this.lastterm.value = this.Ntt.value;">
+<input type="Hidden" name="fuseaction" value="EndecaSearch">
+<input type="hidden" name="N" value="0">
+<input type="hidden" name="lastterm" value="">
 <label for="Search"><strong>Search:</strong></label>
 <input type="text" name="Ntt" id="search" size="30">&nbsp;<input type="Image" src="http://a1512.g.akamaitech.net/f/1512/124/1h/images.ebags.com/img/caselogic/btn-go.gif" id="submit" alt="go">
 </form>
@@ -58,13 +86,12 @@ popupWindow.focus();
 <li><a href="/index.cfm?sub_site_id=2">MP3 &amp; Cell<br>Phone Cases</a></li>
 <li><a href="/index.cfm?sub_site_id=6">Camera<br>Cases</a></li>
 <li><a href="/index.cfm?sub_site_id=5">Laptop<br>Cases</a></li>
-<!-- <li><a href="/about/index.cfm?Fuseaction=bts">Back to <br />School Gear</a></li> -->
 <li><a href="/index.cfm?sub_site_id=12">Backpacks &amp;<br>Messengers</a></li>
 <li><a href="/index.cfm?sub_site_id=11">Travel &amp;<br>Luggage</a></li>
 <li class="nobrd"><a href="/index.cfm?sub_site_id=7">Automotive<br>&amp; GPS</a></li>
 </ul>
 </div>
-<div id="promo"><img src="http://a1512.g.akamaitech.net/f/1512/124/1h/images.ebags.com/img/sourceids/CP_IMG_BANNER_99127989.gif" border="0"></div>
+<div id="promo"><img src="http://a1512.g.akamaitech.net/f/1512/124/1h/images.ebags.com/img/sourceids/CP_IMG_BANNER_30694422.gif" border="0"></div>
 
 <div id="main-content">
 <p><a href="/index.cfm">Home</a> › <a href="/help/">Help Center</a> › Privacy</p>
@@ -86,7 +113,7 @@ popupWindow.focus();
 <p><strong>Automatic Information</strong><br>
 </p><p>We automatically track certain information based upon your behavior on our site. We use this information to analyze our users' behavior, interests, and demographics to better understand and serve our shoppers. This information may include the URL that you just came from, which URL you next go to, what browser you are using, and your IP address.</p>
 <p><strong>What about Cookies?</strong><br>
-"Cookies" are small pieces of information that a web site will store on your computer’s hard drive. Case Logic will use cookies to identify you during your session, make our services easier to use and to store items in your shopping cart between visits. Cookies are never used to store sensitive customer information such as names, addresses, credit card numbers or passwords. Acceptance of cookies is not a requirement to browse our site, however our shopping cart does require the acceptance of cookies to work properly. Most browsers automatically accept cookies, but you can configure your browser to prevent that. If you would like to place an order on our site but object to or otherwise are unable to use cookies, please feel free to place your order via our toll free number: 1.888.666.5780
+"Cookies" are small pieces of information that a web site will store on your computerï¿½s hard drive. Case Logic will use cookies to identify you during your session, make our services easier to use and to store items in your shopping cart between visits. Cookies are never used to store sensitive customer information such as names, addresses, credit card numbers or passwords. Acceptance of cookies is not a requirement to browse our site, however our shopping cart does require the acceptance of cookies to work properly. Most browsers automatically accept cookies, but you can configure your browser to prevent that. If you would like to place an order on our site but object to or otherwise are unable to use cookies, please feel free to place your order via our toll free number: 1.888.666.5780
 </p>
 <p><strong>Personally Identifiable Information</strong><br>
 This is information that you provide to us that is specific to you. We collect information such as your name, phone number, billing information, shipping information and other personal information as indicated on the forms throughout our site. You provide such information when you make a purchase, enter a contest or sweepstakes, fill out a survey or form, provide ratings or testimonials feedback, give or redeem a gift certificate, as applicable. Where possible, We indicate which fields are required and which fields are optional. You can always choose not to provide information, but you may not be able to use a particular service or feature.</p>
@@ -96,7 +123,7 @@ This is information that you provide to us that is specific to you. We collect i
 <p><strong>Contests and Sweepstakes</strong><br>
 When you enter a contest or other promotion, We may ask you for contact information such as your name, address and e-mail address in order to administer the contest, to send you promotional e-mails, notify winners and make the winners' list publicly available pursuant to certain states' laws. As a condition of receiving any prize, you will be required to complete, execute and return an Affidavit of Eligibility, a Liability Release, and where lawful, a Publicity Release, for us to ensure that you are eligible to receive the prize according to the Contest Rules. In cases where the sweepstakes or promotional offer is co-branded with or sponsored by another party, We may share your information to that party. Your consent to such promotional use and disclosure of this information is a condition of your participation.</p>
 <p><strong>E-mails</strong><br>
-It is possible to register as a Case Logic email subscriber directly from our site or through another source, such as a Case Logic sweepstakes hosted on another site or the co-registration network™. Upon registering, We will periodically send you newsletters and e-mails featuring exclusive sales, promotions and other members-only benefits. If you make a purchase on our site We will send you an order and shipping confirmation email. If you are a subscribed member, We will also send you emails to collect ratings and testimonials feedback related to your purchase. If you'd rather not receive emails, please visit the Your Account page to change your preferences.</p>
+It is possible to register as a Case Logic email subscriber directly from our site or through another source, such as a Case Logic sweepstakes hosted on another site or the co-registration networkï¿½. Upon registering, We will periodically send you newsletters and e-mails featuring exclusive sales, promotions and other members-only benefits. If you make a purchase on our site We will send you an order and shipping confirmation email. If you are a subscribed member, We will also send you emails to collect ratings and testimonials feedback related to your purchase. If you'd rather not receive emails, please visit the Your Account page to change your preferences.</p>
 <p><strong>Fulfillment</strong><br>
 During the purchase process, We will share your information with certain intermediaries (e.g. UPS, or Cybercash) strictly to process and ship your order.</p>
 <p><strong>Promotional Offers</strong><br>
@@ -133,7 +160,8 @@ Case Logic will cooperate with law enforcement inquiries. Case Logic reserves th
 <p>You may also write to us at:<br>
 Privacy Manager<br>
 Case Logic, Inc.<br>
-6060 Greenwood Plaza Blvd.<br>
+5500 Greenwood Plaza Blvd.<br>
+Suite 160<br>
 Greenwood Village, CO 80111</p>
 <p>We always enjoy hearing from you and appreciate your business.</p>
 </div>
@@ -178,9 +206,9 @@ elmt.value='';
 </div>
 <div id="footer-nav">
 <p><a href="/about/">About Case Logic</a> | <a href="/about/index.cfm?Fuseaction=news">In the News</a> | <a href="http://www.caselogic.com/giftcertificates/index.cfm">Gift Certificates</a> | <a href="/SiteMap">Site Map</a> | <a href="/help/index.cfm?fuseaction=privacy&amp;PageEnd_Link=Privacy">Privacy</a> | <a href="/info/index.cfm?FuseAction=security&amp;PageEnd_Link=Security">Security</a> | <a href="/help/index.cfm?fuseaction=warranty&amp;HelpCenter_Link=Warranty">Warranty</a></p>
-<p><a href="/about/index.cfm?fuseaction=resellers">CasePartners Program</a> | <a href="/about/index.cfm?fuseaction=corporate_oem">Custom Products (OEM)</a> | <a href="http://www.caselogic.com/about/index.cfm?fuseaction=dealer">Dealers</a> | <a href="/about/index.cfm?fuseaction=jobs">Careers</a> | <a href="http://www.caselogic.com/about/index.cfm?fuseaction=HolidayDeliverySchedule" target="_blank">Holiday Shipping Schedule</a>
+<p><a href="/about/index.cfm?fuseaction=resellers">CasePartners Program</a> | <a href="/about/index.cfm?fuseaction=corporate_oem">Custom Products (OEM)</a> | <a href="http://www.caselogic.com/about/index.cfm?fuseaction=dealer">Dealers</a> | <a href="/about/index.cfm?fuseaction=jobs">Careers</a>
 </p>
-<p>© 1984 - 2008 Case Logic, Inc. A majority of Case Logic products are protected by U.S. or foreign patents or are patent pending.</p>
+<p>© 1984 - 2009 Case Logic, Inc. A majority of Case Logic products are protected by U.S. or foreign patents or are patent pending.</p>
 </div>
 </form>
 </div>
@@ -188,7 +216,6 @@ elmt.value='';
 
 
 
-<img border="0" width="1" height="1" src="http://track.roiservice.com/track/pixel.gif.aspx?roiid=933075107000016&amp;sid=&amp;desc=landingpage&amp;refr=">
 <script language="JavaScript"><!--
 {
 document.write("<img src=http://tracking.searchmarketing.com/welcome.asp?SMCID=266&x="+escape(document.referrer)+" width=1 height=1>");
@@ -202,11 +229,46 @@ _uacct = "UA-218344-6";
 _udn="CaseLogic.com";
 urchinTracker();
 </script>
-<!-- Omniture Error: System.NullReferenceException: Object reference not set to an instance of an object.
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.SetOmnitureBasketId()
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.BuildOmnitureVariables()
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.Execute()
-
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.SetOmnitureBasketId()
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.BuildOmnitureVariables()
-   at eBags.Service.SiteStats.Omniture.OmnitureSiteStatsTracker.Execute() --></body></html>
+<!-- SiteCatalyst code version: H.10. Copyright 1997-2007 Omniture, Inc. More info available at http://www.omniture.com -->
+<script language="JavaScript">var s_account='ebagscaselogicprod';
+var s_trackGoogleCheckoutKey='0';
+var tc_server_url = window.tc_server_url || 'tc.ebags.com';
+</script>
+<script language="JavaScript" src="/s_code.js"></script>
+<script language="JavaScript"><!--
+s.currencyCode='USD'
+/* You may give each page an identifying name, server, and channel on the next lines. */
+/* s.pageName set in s_code file based on s.channel, s.prop3, 4 */
+s.pageType=''
+s.prop1=''
+s.pageName='Help : Privacy Policy'
+s.prop3=''
+s.prop9=''
+s.eVar3=''
+s.eVar1=''
+s.prop8=''
+s.channel='Help'
+s.eVar6=''
+s.prop5='Help'
+s.events=''
+s.prop7=''
+s.server='LAKE'
+s.state=''
+s.prop2=''
+s.eVar2=''
+s.eVar8='Help'
+s.purchaseID=''
+s.eVar4=''
+s.zip=''
+s.eVar5=''
+s.prop4=''
+s.products=''
+s.prop6=''
+s.campaign=''
+/********** DO NOT ALTER ANYTHING ELSE BELOW THIS LINE! *************/
+var s_code=s.t();if(s_code)document.write(s_code)//--></script>
+<noscript>
+<img src='http://o.ebags.com/b/ss/ebagscaselogicprod/1/H.10--NS/509650?pageType%3d''%26c1%3d''%26pageName%3d'Help+%3a+Privacy+Policy'%26c3%3d''%26c9%3d''%26v3%3d''%26v1%3d''%26c8%3d''%26ch%3d'Help'%26v6%3d''%26c5%3d'Help'%26pageType%3d''%26c7%3d''%26server%3d'LAKE'%26state%3d''%26c2%3d''%26v2%3d''%26v8%3d'Help'%26purchaseID%3d''%26v4%3d''%26zip%3d''%26v5%3d''%26c4%3d''%26products%3d''%26c6%3d''%26campaign%3d''%26g%3dhttp%3a%2f%2fwww.caselogic.com%2fhelp%2findex.cfm%3ffuseaction%3dprivacy%26PageEnd_Link%3dPrivacy%26r%3d'>
+</noscript>
+<!-- End SiteCatalyst code version: H.10. -->
+</body></html>
