--- a/w/we/web/webaward.org.html
+++ b/w/we/web/webaward.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the webaward.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216151625id_/http%3A//www.webaward.org/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webaward.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616063314id_/http%3A//www.webaward.org/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Privacy Web Marketing Association's WebAwards</title>
@@ -176,11 +176,11 @@ If you supply us with your email or postal address, you may receive periodic mai
 
                       <table width="152" border="0" cellspacing="0" cellpadding="0">
                         <tbody><tr>
-                          <td class="quotetext"><strong><em>“My company is able to promote the WebAward as a non-biased recognition of the hard work done by the entire marketing team.” </em></strong></td>
+                          <td class="quotetext"><strong><em>“The WebAward did lend credibility and prestige to our organization. It is a validation of the work we are doing.” </em></strong></td>
                         </tr>
                         <tr>
                           <td align="right" class="quotetext"><strong><em><br>
-                            – Todd Nelson, AFTRA-SAG Federal Credit Union</em></strong></td>
+                            – Maggie Jessup, Director Just Yell Fire</em></strong></td>
                         </tr>
                       </tbody></table>
                       <br>                    <table width="168" border="0" cellpadding="0" cellspacing="0" id="table2">
@@ -196,7 +196,7 @@ If you supply us with your email or postal address, you may receive periodic mai
 								<tbody><tr>
 									<td class="header2" align="center">WebAward Sponsors</td>
 								</tr>
-<tr><td align="center"><a href="http://www.snap.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/snapshots_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://phizzpop.visitmix.com/" target="_blank"><img src="http://www.webaward.org/images/sponsors/GoBo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.bgtpartners.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/bgt_logo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.burstmedia.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/burstlogo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.prweb.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/PRWeb_logo_sp_sm.gif" border="0"></a></td></tr><tr><td align="center"><a href="http://www.misukanisodden.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/mando_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.smallarmy.net" target="_blank"><img src="http://www.webaward.org/images/sponsors/smallarmy_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.exacttarget.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/ExactTarget_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.newsusa.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/newsusa_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.websiteservices.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/websitemag_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.mediapost.com/omma/" target="_blank"><img src="http://www.webaward.org/images/sponsors/OMMAlogo_120x90_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.ad-tech.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/adtech_rgb_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.internetworld.co.uk" target="_blank"><img src="http://www.webaward.org/images/sponsors/iw_logo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.searchenginestrategies.com/" target="_blank"><img src="http://www.webaward.org/images/sponsors/sesconf_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.WebmasterRadio.FM" target="_blank"><img src="http://www.webaward.org/images/sponsors/wmr_01_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.rovion.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/rovion_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.allbusiness.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/allbizlogo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.yourlogoonchocolate.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/ccpc_sp_sm.jpg" border="0"></a></td></tr>
+<tr><td align="center"><a href="http://www.newsusa.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/newsusa_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.burstmedia.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/burstlogo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://phizzpop.visitmix.com/" target="_blank"><img src="http://www.webaward.org/images/sponsors/GoBo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.bgtpartners.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/bgt_logo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.24-7pressrelease.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/24-7press_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.exacttarget.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/ExactTarget_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.websiteservices.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/websitemag_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.ad-tech.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/adtech_rgb_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.internetworld.co.uk" target="_blank"><img src="http://www.webaward.org/images/sponsors/iw_logo_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.searchenginestrategies.com/" target="_blank"><img src="http://www.webaward.org/images/sponsors/sesconf_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.WebmasterRadio.FM" target="_blank"><img src="http://www.webaward.org/images/sponsors/wmr_01_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.rovion.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/rovion_sp_sm.jpg" border="0"></a></td></tr><tr><td align="center"><a href="http://www.allbusiness.com" target="_blank"><img src="http://www.webaward.org/images/sponsors/allbizlogo_sp_sm.jpg" border="0"></a></td></tr>
 
 							</tbody></table>
 						</div>
@@ -231,12 +231,6 @@ If you supply us with your email or postal address, you may receive periodic mai
                     | <a class="bottomnav" href="privacy.asp">Privacy Statement</a></strong></td>
                 </tr>
               </tbody></table>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-271930-1";
-urchinTracker();
-</script>
 <!-- Google Code for default Conversion Page -->
 <script language="JavaScript" type="text/javascript">
 <!--
@@ -253,7 +247,12 @@ var google_conversion_color = "FFFFFF";
 <img height=1 width=1 border=0 
 src="http://www.googleadservices.com/pagead/conversion/1072729658/extclk?script=0">
 </noscript>
-</td>
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-271930-1";
+urchinTracker();
+</script></td>
           </tr>
         </tbody></table></td>
     <td width="25" background="images2006/dshad_right.gif">&nbsp;</td>
