--- a/t/th/the/thehuddle.com.html
+++ b/t/th/the/thehuddle.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the thehuddle.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216160938id_/http%3A//www.thehuddle.com/site/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the thehuddle.com privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616065419id_/http%3A//www.thehuddle.com/site/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Fantasy Football in The Huddle - Privacy Policy</title>
@@ -36,7 +36,7 @@ var random_number = a;
           <td rowspan="2" class="masthead-td-logo"><a href="http://www.thehuddle.com"><img src="http://www.thehuddle.com/images/logo-masthead08.jpg" alt="Fantasy Football In The Huddle" width="250" height="130" border="0"></a></td>
           <td colspan="2" class="masthead_td_banner"><script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=' + random_number + '?></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=5211634131?"></script>
+</script><script src="http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;dcopt=ist;sz=728x90;ord=8259384991?"></script>
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;sz=728x90;ord='+random_number+'?" >
 <IMG SRC="http://ad.doubleclick.net/ad/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=1;sz=728x90;ord='+random_number+'?" border="0" height="90" width="728"></A>
@@ -71,7 +71,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/fantasy_football_nfl_teams.php" class="mastnav-link">TEAMS</a></td>
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/fantasy_football_nfl_players.php" class="mastnav-link">PLAYERS</a></td>
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/fantasy_football_nfl_draft.php" class="mastnav-link">NFL DRAFT</a></td>
-          <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/blog/" class="mastnav-link">BLOGS</a></td>
+          <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/blog/" class="mastnav-link">BLOG</a></td>
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/fantasy_football_nfl.php" class="mastnav-link">NFL</a></td>
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://forums.thehuddle.com" class="mastnav-link">FORUMS</a></td>
           <td nowrap="" class="mastnav-td" style="border-right:1px solid #666655;"><a href="http://www.thehuddle.com/site/fantasy_football_huddle_information.php" class="mastnav-link">ABOUT</a></td>
@@ -108,7 +108,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros
                             In order to subscribe to Our Sites, subscribers to our subscription products provide InterSport with personal information including name, address, e-mail address and credit card information. InterSport keeps all such information strictly confidential and does not reuse, resell or redistribute it in any way. </p>
                           <p>At the time of registering for their subscription, site subscribers are asked whether they wish to receive e-mail from InterSport such as notification of new subscription benefits. InterSport does not reuse or resell the list of users who have "opted in" to such mailings.</p>
                           <p><b>InterSport Community</b><br>
-                            Subscribers to Our Sites who register for our message board community provide us with a username, password and a working e-mail address. This information to set up your community account. We do not sell or redistribute this community list and will not send you e-mail at the address you provide, except for infrequent announcements relating to the community or as needed to resolve issues that may arise with your community account. The e-mail address you register with at the community will be posted in the message boards if and when you post comments there, but you are free at any time to publically hide that e-mail address if you wish. Participants in the community are expected to comply with the rules governing the area, but we cannot control third parties' use of information you may choose to provide in such a public forum. For more information see the community registration page.</p>
+                            Subscribers to Our Sites who register for our message board community provide us with a username, password and a working e-mail address. This information to set up your community account. We do not sell or redistribute this community list to any third parties. The e-mail address you register with at the community will be posted in the message boards if and when you post comments there, but you are free at any time to publically hide that e-mail address if you wish. Participants in the community are expected to comply with the rules governing the area, but we cannot control third parties' use of information you may choose to provide in such a public forum. For more information see the community registration page.</p>
                           <p><b>Promotions</b><br>
                             From time to time, InterSport may sponsor sweepstakes, contests or other events which require the collection, processing and storage of individual contact and demographic information (e.g., your age and state of residence) to be used for the event. InterSport may also co-sponsor these events along with other companies, in which case the user's individual contact and demographic information is likely to be shared with other participating sponsors, who may use this information as they wish. A registrant's personal contact and demographic information will not be released to any third-party organization other than named sponsors without the user's consent, and InterSport will request that such named sponsors uphold the privacy of the registrants' information by not distributing or sharing such information with any other businesses or organizations.</p>
                           <p><b>Surveys</b><br>
@@ -143,7 +143,7 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros
                 <tr>
                   <td class="ad_side_area"><script>
 document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=2;sz=160x600;ord=' + random_number + '?></scr' + 'ipt>');
-</script><script src="http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=2;sz=160x600;ord=5211634131?"></script>
+</script><script src="http://ad.doubleclick.net/adj/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=2;sz=160x600;ord=8259384991?"></script>
 <noscript>
 <A HREF="http://ad.doubleclick.net/jump/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=2;sz=160x600;ord='+random_number+'?" >
 <IMG SRC="http://ad.doubleclick.net/ad/thehuddle.fsv/ros;sect=ros;fantasy=yes;game=no;tile=2;sz=160x600;ord='+random_number+'?" border="0" height="600" width="160"></A>
@@ -155,14 +155,14 @@ document.write('<scr' + 'ipt src=http://ad.doubleclick.net/adj/thehuddle.fsv/ros
             <table cellspacing="0" cellpadding="0" class="footer">
         <tbody><tr>
           <td class="footer-td"><p><a href="http://www.thehuddle.com" class="footer-link">Home - Fantasy Football</a> | <a href="http://www.thehuddle.com/fantasy_football_draft_kit.php" class="footer-link">Fantasy Football Draft Kit</a> | <a href="http://www.thehuddle.com/fantasy_football_features.php" class="footer-link">In Season</a> | <a href="http://www.thehuddle.com/fantasy_football_articles.php" class="footer-link">Fantasy Football Articles</a> | <a href="http://www.thehuddle.com/fantasy_football_news.php" class="footer-link"> Fantasy Football News</a> | <a href="http://www.thehuddle.com/fantasy_football_statistics.php" class="footer-link">Statistics</a> | <a href="http://www.thehuddle.com/fantasy_football_nfl_teams.php" class="footer-link">NFL Teams</a> | <a href="http://www.thehuddle.com/fantasy_football_nfl_players.php" class="footer-link">NFL Players</a> | <a href="http://www.thehuddle.com/fantasy_football_nfl_draft.php" class="footer-link">NFL Draft</a> | <a href="http://www.thehuddle.com/blog/" class="footer-link">Blogs</a> | <a href="http://www.thehuddle.com/fantasy_football_nfl.php" class="footer-link">NFL</a> | <a href="http://forums.thehuddle.com" class="footer-link">Message Boards</a><br>
-              <a href="http://www.thehuddle.com/site/fantasy_football_huddle_information.php" class="footer-link">Why Join The Huddle</a> | <a href="http://www.thehuddle.com/site/fantasy_football_huddle_history.php" class="footer-link">Our History &amp; Team</a> | <a href="http://www.thehuddle.com/site/fantasy_football_huddle_faq.php" class="footer-link">FAQ</a> | <a href="http://www.thehuddle.com/site/join.php" class="footer-link">JOIN THE HUDDLE</a> | <a href="http://www.thehuddle.com/site/advertising.php" class="footer-link">Advertise With Us</a> | <a href="http://www.thehuddle.com/site/promote.php" class="footer-link">Link To Us</a> | <a href="http://www.thehuddle.com/site/contact.php" class="footer-link">Feedback</a><a href="site/contact.php" class="footer-link"></a> | <a href="http://www.thehuddle.com/site/football_resources.php" class="footer-link">Links</a> | <a href="http://www.thehuddle.com/site/site_map.php" class="footer-link">Site Map</a> | <a href="http://www.thehuddle.com/site/help.php" class="footer-link">Help</a> | <a href="http://www.thehuddle.com/site/contact.php" class="footer-link">Contact Us</a></p>
+              <a href="http://www.thehuddle.com/site/fantasy_football_huddle_information.php" class="footer-link">Why Join The Huddle</a> | <a href="http://www.thehuddle.com/site/fantasy_football_huddle_history.php" class="footer-link">Our History &amp; Team</a> | <a href="http://www.thehuddle.com/site/fantasy_football_huddle_faq.php" class="footer-link">FAQ</a> | <a href="http://www.thehuddle.com/site/join.php" class="footer-link">JOIN THE HUDDLE</a> | <a href="http://www.thehuddle.com/site/advertising.php" class="footer-link">Advertise With Us</a> | <a href="http://www.thehuddle.com/site/promote.php" class="footer-link">Link To Us</a> | <a href="http://www.thehuddle.com/site/contact.php" class="footer-link">Feedback</a> | <a href="http://www.thehuddle.com/site/football_resources.php" class="footer-link">Links</a> | <a href="http://www.thehuddle.com/site/site_map.php" class="footer-link">Site Map</a> | <a href="http://www.thehuddle.com/site/help.php" class="footer-link">Help</a> | <a href="http://www.thehuddle.com/site/contact.php" class="footer-link">Contact Us</a></p>
           </td>
         </tr>
         <tr>
           <td class="footer-td"><b>The Huddle is a member of the Pro Football Writers of America, Fantasy Sports Trade Association and Fantasy Sports Writers Association.</b></td>
         </tr>
         <tr>
-          <td class="footer-td">Your use of this website constitutes acceptance of it's <a href="http://www.thehuddle.com/site/privacy.php" class="footer-link-sub">Privacy Policy</a> and <a href="http://www.thehuddle.com/site/terms.php" class="footer-link-sub">Terms of Use</a>.&nbsp;&nbsp;© Copyright 1997-2008, InterSport, Inc. All rights reserved.</td>
+          <td class="footer-td">Your use of this website constitutes acceptance of it's <a href="http://www.thehuddle.com/site/privacy.php" class="footer-link-sub">Privacy Policy</a> and <a href="http://www.thehuddle.com/site/terms.php" class="footer-link-sub">Terms of Use</a>.&nbsp;&nbsp;© Copyright 1997-2009, InterSport, Inc. All rights reserved.</td>
         </tr>
       </tbody></table>
     </td>
@@ -183,4 +183,14 @@ var pageTracker = _gat._getTracker("UA-4086578-2");
 pageTracker._initData();
 pageTracker._trackPageview();
 </script>
+<!--Calls for quantcast analytics-->
+<script type="text/javascript">
+_qoptions={
+qacct:"p-b5tdYgtmeOjCU"
+};
+</script>
+<script type="text/javascript" src="http://edge.quantserve.com/quant.js"></script>
+<noscript>
+<img src="http://pixel.quantserve.com/pixel/p-b5tdYgtmeOjCU.gif" style="display: none;" border="0" height="1" width="1" alt="Quantcast"/>
+</noscript>
 </body></html>
